--- a/mfg.tex
+++ b/mfg.tex
@@ -1,4 +1,5 @@
 % Section 8 in file mfg.tex
+\tbw
 
 % Section 8.1
 \subsection{PCB House}
@@ -18,6 +19,16 @@
 
 % Section 8.2.1
 \subsubsection{Footprint (SMD vs Through-Hole)}
+\todo{this isn't complete from Joseph}
+In WHCS we had to consider two construction methods for our base station and
+control module boards; through hole boards, and surface mounted boards. Through
+hole board technology is the older of the two technologies and is currently
+much less popular than surface mounting. One of the of the advantages of
+surface mounting is that it takes up less space allowing more real estate for
+parts for a given board. Because surface mounting does not involve drilling it
+is simpler and faster to construct. Although there are some advantages in
+through hole boards for most applications surface mounted technology wins.
+Therefore in our design we will be using surface mounted technology.
 
 % Section 8.3
 \subsection{Construction}
