--- a/test.tex
+++ b/test.tex
@@ -1,4 +1,5 @@
 % Section 9 in file test.tex
+\tbw
 
 % Section 9.1
 \subsection{Power Supply}
@@ -39,6 +40,7 @@
 
 % Section 9.4
 \subsection{Door Access}
+\tbw
 
 % Section 9.5
 \subsection{Android To Base Station Communication}
