--- a/whcs.tex
+++ b/whcs.tex
@@ -123,6 +123,9 @@ pdfauthor={Grant Hernandez},
   \ucffig{#2}{\includegraphics[#1]{#3}}{#4}
 }
 
+% TBW macro
+\newcommand{\tbw}{\emph{This section is in the process of being written.}}
+
 % Section Heading Customization
 \newcommand\titlebar{%
 \tikz[baseline,trim left=3.1cm,trim right=3cm] {
