--- a/demo.tex
+++ b/demo.tex
@@ -1,4 +1,5 @@
 % Section 10 in file demo.tex
+\tbw
 
 % Section 10.1
 \subsection{Voice Controlled Light Activation}
@@ -18,4 +19,3 @@
 \subsection{Remote Door Access}
 \label{sec:demo-door}
 \todo{1 page}
-
