--- a/summary.tex
+++ b/summary.tex
@@ -42,7 +42,7 @@ constraints. The parts used in the system will be chosen so that they are
 widely available. Our boards and parts will be designed so that they are easy
 to replicate and manufacture. With a product such as WHCS health and safety is
 clearly an issue. The system is meant to be installed inside the home where the
-user should feel at use with the system installed. Thus it is ethical for us to
+user should feel at ease with the system installed. Thus it is ethical for us to
 put effort into making the system safe to use. Things such as controlling the
 home{}'s high voltage will have to be done in a safe manner. Security is
 another strong constraint attributed to products targeting the home. The system
