Resolving Issue #2, and Issue #3
Simple spelling errors

--- a/desc.tex
+++ b/desc.tex
@@ -100,7 +100,7 @@ Lights aren't the only actionable thing in the home. There are a multitude of
 appliances throughout the home which could benefit from remote control. Some
 of these include coffee makers, toasters, or computers\todo{find some better
 examples}. If integrated with WHCS through outlet control, these appliances
-would be able to be apart of the home network. Imagine being able to start the
+would be able to be a part of the home network. Imagine being able to start the
 morning coffee from the comfort of the bedroom. This would be possible with an
 appropriate coffee maker and WHCS outlet control. An added benefit from having
 outlets being automated is that there would be less draw from power leeching
@@ -111,7 +111,7 @@ hyping up how much power you lose to leeches}
 \subsubsection{Door Access}
 In addition to controlling home lights and various appliances, giving users
 remote control of their doors is  a goal of WHCS. Through the use of an
-\emph{electronic door strike}, we would provide specific control module the
+\emph{electronic door strike}, we would provide a specific control module the
 capability of locking and unlocking a door. This functionality would be
 demonstrated in Demo \ref{sec:demo-door}. WHCS sees door access as important
 for a home automation system to support because remote access, like a garage
